--- a/the_purpose/index.css
+++ b/the_purpose/index.css
@@ -34,12 +34,51 @@ header{
    z-index: 100;
    right: 0;
 }
+/* 以下javascript用 */
+.sa {
+  opacity: 0;
+  transition: all .5s ease;
+}
+
+.sa.show {
+  opacity: 1;
+  transform: none;
+}
+.lr {
+  transform: translate(-400px, 0);
+}
+.rl {
+  transform: translate(400px, 0);
+}
+/* .up {
+  transform: translate(0, 100px);
+}
+.down {
+  transform: translate(0, -100px);
+}
+.scaleUp {
+  transform: scale(.5);
+}
+.scaleDown {
+  transform: scale(1.5);
+}
+.rotateL {
+  transform: rotate(180deg);
+}
+.rotateR {
+  transform: rotate(-180deg);
+} */
+
+
+
+
 .menu img{
   width: 150px;
 }
 .side_contents img{
     width:  100px;
     margin: 20vh 0;
+    cursor: pointer;
 }
 .site_map{
   width: 150px;
