--- a/the_purpose/index.css
+++ b/the_purpose/index.css
@@ -6,6 +6,14 @@ body{
     font-size: 100%;
 }
 
+*, *:before, *:after {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+         -o-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
 /*pはブロック要素のため以下で自動折り返し*/
 p,h1{
   word-break: break-all;
@@ -44,11 +52,12 @@ header{
   opacity: 1;
   transform: none;
 }
+/* この+でバグるっぽい→-だと正常に動く */
 .lr {
-  transform: translate(-400px, 0);
+  transform: translate(200px, 0);
 }
 .rl {
-  transform: translate(400px, 0);
+  transform: translate(-200px, 0);
 }
 /* .up {
   transform: translate(0, 100px);
@@ -69,6 +78,66 @@ header{
   transform: rotate(-180deg);
 } */
 
+#nav-drawer {
+  position: relative;
+}
+/*チェックボックス等は非表示に*/
+.nav-unshown {
+  display:none;
+}
+/*アイコンのスペース*/
+#nav-open {
+    display: inline-block;
+    width: 30px;
+    height: 22px;
+    vertical-align: middle;
+}
+/*閉じる用の薄黒カバー*/
+#nav-close {
+    display: none;/*はじめは隠しておく*/
+    position: fixed;
+    z-index: 99;
+    top: 0;/*全体に広がるように*/
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 0;
+    transition: .3s ease-in-out;
+}
+/*中身*/
+#nav-content {
+    overflow: auto;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 9999;/*最前面に*/
+    width: 100%;/*右側に隙間を作る*/
+    max-width: 200px;/*最大幅*/
+    height: 100%;
+    background: #fff;/*背景色*/
+    transition: .3s ease-in-out;/*滑らかに表示*/
+    -webkit-transform: translateX(105%);
+    transform: translateX(105%);/*左に隠しておく*/
+}
+/*チェックが入ったらもろもろ表示*/
+#nav-input:checked ~ #nav-close {
+    display: block;/*カバーを表示*/
+    opacity: .5;
+}
+#nav-input:checked ~ #nav-content {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);/*中身を表示*/
+    box-shadow: 6px 0 25px rgba(0,0,0,.15);
+}
+#nav-content a{
+  display: block;
+  color: black;
+  margin: 5vh 0;
+}
+#nav-content h1{
+  padding: 10vh 0;
+}
 
 
 
@@ -77,21 +146,17 @@ header{
 }
 .side_contents img{
     width:  100px;
-    margin: 20vh 0;
+    margin: 10vh 0;
     cursor: pointer;
 }
 .site_map{
   width: 150px;
   height: 100%;
   background-color: #dddddd;
-  position: fixed;
-  display: none;
-  z-index: 1000;
-  right: 0;
-  bottom: 0;
+  margin-right: 150px;
 }
 .site_map p{
-  padding-top: 20vw;
+  padding-top:;
 }
 
 a:link, :visited {
@@ -129,6 +194,12 @@ a:link, :visited {
 .head img{
   width: 100%;
 }
+.temple{
+
+}
+.tamtam{
+  display: none;
+}
 /* .head_mask{
   height: 100%;
 } */
@@ -165,7 +236,7 @@ a:link, :visited {
 
 .anxiety{
   padding-top: 15%;
-  height: 900px;
+  height: 1200px;
 }
 .anxiety h1{
   font-size: 8vw;
@@ -223,7 +294,7 @@ a:link, :visited {
 
 
 .power{
-  margin-top: 200px;
+  padding-top: 200px;
   font-size: 0;
 }
 .power h1{
@@ -269,8 +340,8 @@ a:link, :visited {
 
 
 .service{
-  padding-top: 20vw;
-  height:2600px;
+  padding-top: 5vh;
+  height:3200px;
   color: #000000;
 }
 .service h1{
@@ -345,7 +416,7 @@ a:link, :visited {
 }
 .flow_content{
   text-align: left;
-  height: 100px;
+  height: 125px;
   margin:0 2vw 75px 30vw;
   background-color: #f4f4f4;
   font-size: 0;
@@ -414,7 +485,7 @@ a:link, :visited {
   color: white;
 }
 .about_us h1{
-    display: inline-block;
+  display: inline-block;
   padding: 5vh 0;
 }
 .about_us a{
@@ -553,7 +624,7 @@ display: none;
 
 
   .flows_contents{
-    width: 23vw;
+    width: 20vw;
   }
   footer{
     margin-right: 0;
@@ -573,6 +644,9 @@ display: none;
   }
   .anxiety h1{
     font-size: 8vw;
+  }
+  .lr {
+    transform: translate(0, 0);
   }
 }
 
@@ -607,7 +681,7 @@ display: none;
 }
 
 .service {
-    padding-top:100vw;
+    padding-top:5vw;
 }
 .anxieties_contents h2{
   margin-left: 5vw;
@@ -694,9 +768,6 @@ width: 100%;
   .flow_contents{
     margin-left: 2vw;
   }
-  .flow_content{
-    width: 80vw;
-  }
   .usus{
     margin-left: 5vw;
   }
@@ -705,13 +776,15 @@ width: 100%;
     font-size: 13px;
   }
   .flow_content{
+    width: 80vw;
     height: 70px;
-    margin:0 2vw 40px 10vw;
-    background-color: #e0e0e0;
-    font-size: 0;
-    padding: 10px 0 0 25px;
-    border-radius: 20px;
-    box-shadow: 2px 2px #000000;
+    margin:0 auto 10vw;
+    padding: 0;
+    padding-left: 2vh;
+  }
+  .flow_content img{
+    width: 40px;
+    height: 60px;
   }
   .flow{
     height: 1300px;
@@ -747,7 +820,12 @@ width: 100%;
  .power{
    height: 2200px;
  }
-
+ .temple{
+   display: none;
+ }
+ .tamtam{
+   display:inherit;
+ }
 
 
 }
