--- a/the_purpose/index.css
+++ b/the_purpose/index.css
@@ -1,9 +1,14 @@
-head,body,header,footer,h1,h2,h3,h5,a,img,p,div{
-padding: 0;
-margin: 0;
+head,body,header,footer,h1,h2,h3,h5,a,img,p,div,span{
+  padding: 0;
+  margin: 0;
 }
 body{
-    font-size: 100%;
+  font-size: 100%;
+}
+/*以下ソースで、各種デバイスで高さが綺麗になる。*/
+html,body,header{
+  height: 100%;
+  text-align: center;
 }
 
 *, *:before, *:after {
@@ -18,68 +23,32 @@ body{
 p,h1{
   word-break: break-all;
 }
-
-
 /*下記で下線部を消す*/
 a{
   text-decoration: none;
 }
 a:link, :visited {
-    text-decoration: none;
+  text-decoration: none;
+}
+@font-face{
+  font-family: "Sawarabi Mincho";
+  src : url(https://fonts.googleapis.com/css?family=Sawarabi+Mincho);
 }
 
-/*以下ソースで、各種デバイスで高さが綺麗になる。*/
-html,body,header{
-    height: 100%;
+body{
+  background-image: url(./img/shinpe.jpg);
+  background-attachment: fixed;
+  font-family: 'Sawarabi Mincho', sans-serif;
+  font-family: 'Lora', serif;
 }
-
-
-header{
-   text-align: center;
-   width: 150px;
-   background-color: #61C5FF;
-   position: fixed;/*positionとbottomやらtopやらは一緒に使う.margin使えなくなる*/
-   z-index: 100;
-   right: 0;
+#fifi{
+  width: 100%;
+  height: 100px;
+  position: fixed;
+  background-color: #02232F;
 }
-/* 以下javascript用 */
-.sa {
-  opacity: 0;
-  transition: all .5s ease;
-}
-
-.sa.show {
-  opacity: 1;
-  transform: none;
-}
-/* この+でバグるっぽい→-だと正常に動く */
-.lr {
-  transform: translate(200px, 0);
-}
-.rl {
-  transform: translate(-200px, 0);
-}
-/* .up {
-  transform: translate(0, 100px);
-}
-.down {
-  transform: translate(0, -100px);
-}
-.scaleUp {
-  transform: scale(.5);
-}
-.scaleDown {
-  transform: scale(1.5);
-}
-.rotateL {
-  transform: rotate(180deg);
-}
-.rotateR {
-  transform: rotate(-180deg);
-} */
 
 #nav-drawer {
-  margin-top: 100px;
   position: relative;
 }
 /*チェックボックス等は非表示に*/
@@ -153,363 +122,81 @@ header{
 #nav-content h1{
   padding: 10vh 0;
 }
-
-
 .menu img{
-  width: 150px;
+  width: 100px;
 }
 .side_contents img{
     width:  100px;
-    margin: 10vh 0;
     cursor: pointer;
+    float: right;
 }
-.site_map{
-  width: 150px;
-  height: 100%;
-  background-color: #dddddd;
-  margin-right: 150px;
+.menu{
+  float: left;
 }
-.site_map p{
-  padding-top:;
-}
-
-a:link, :visited {
-    text-decoration: none;
-  }
 
 .scroll_top{
-    width: 50px;
-    height: 50px;
-    border: 8px #fff solid;
-    border-top: none;
-    border-left: none;
-    display: inline-block;
-    position: fixed;
-    z-index: 1000;
-    transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    transition: all 1s;
-    -webkit-transition: all 1s;
-    -moz-transition: all 1s;
-    bottom: 20px;
-    right:45px;
-    z-index: 1000;
-}
-
-
-
-
-
-.head{
-  height: 100%;
-  margin-right: 150px;
-}
-.head{
-
-}
-.head img{
-  width: 100%;
-}
-.temple{
-
-}
-.tamtam{
+  width: 40px;
+  height: 40px;
+  border: 8px #ff0000 solid;
+  border-top: none;
+  border-left: none;
   display: none;
+  position: fixed;
+  z-index: 1000;
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  transition: all 1s;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  bottom: 5px;
+  right:25px;
+  z-index: 1000;
 }
-/* .head_mask{
-  height: 100%;
-} */
-/* .head_star{
-  padding-top:12%;
-}
-.head_star h1{
-  font-size: 70px;
-}
-.head_contents{
-  padding: 50vh 0 0 5vw;
-  font-size: 25px;
-  text-align: left;
-}
-.head_contents h2{
-  font-size:3vw;
-}
-*/
-.line{
-  border-bottom: 3px solid red;
-}
+
+
 .main{
-  margin-right: 150px;
-  text-align: center;
-  background-image: url(./img/main_wrap.jpg);
-  background-size: cover;
+  height: 100%;
 }
 
-
-
-.anxiety{
-  padding:15% 0;
+.top{
+  height: 100%;
 }
-.anxiety h1{
-  font-size: 8vw;
-  margin: 0 auto;
-  font-weight: normal;
-}
-.anxieties{
-  margin:0 10vw;
-  padding-top: 5vw;
-}
-.anxieties_contents{
+.top-main{
   text-align: left;
-  margin: 5vw 0;
-  background-color: #f4f4f4;
-  line-height: 120px;
-  border-radius: 20px;
-  box-shadow: 5px 5px #000000;
+  font-size: 2.5vw;
+  padding: 15vw 0 0 10vw;
 }
-.anxieties_contents h2{
+.margin-left{
   margin-left: 5vw;
-  font-size: 2.3vw;
 }
-.anx_center{
-  display: inline-block;
-  width: 5vw;
-  padding-left: 30px;
+.top-sub{
+  margin: 20vh auto 0;
+  font-size: 2vw;
 }
-
-
-
-
-.answer{
-  padding-top: 100px;
-  background-color: #ffffff;
+.blue{
+  color: blue;
 }
-.answer h1{
-  font-size: 8vw;
-  padding-bottom: 10vw;
+.top-kaisha{
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+  font-size: 2vw;
 }
-.answer_contents{
-  padding: 10vw;
-}
-.answer img{
-  width: 100%;
-}
-
-
-
-
-
 
 
 .power{
-  padding: 10vh 0;
-  font-size: 0;
+  height : 3000px;
 }
-.power h1{
-  margin: 0 auto;
-  font-size: 7vw;
-  color: #000000;
-
-
-}
-.power_wrap{
-  margin-top: 70px;
-  font-size:0;
-  width: 100%;
-}
-.power_contents{
-  vertical-align: top;
-  display: inline-block;
-  width: 37%;
-  margin: 0 20px 50px;
-  font-size: 0;
-
-}
-.power_contents h2{
-  margin: 0 auto;
-  font-size: 4vw;
-  margin-bottom:50px;
-  color: #000000;
-
-}
-.power_contents p{
-  color: #000000;
-    font-size: 2vw;
-}
-.power_contents img{
-  width: 100%;
-
-}
-
-
-
-
-
-
-.service{
-  padding-top: 5vh;
-  color: #000000;
-}
-.service h1{
-  margin: 0 auto;
-  margin-bottom: 15vw;
-  font-size: 8vw;
-}
-.service_wrap{
-  height: 500px;
-}
-.service p{
-  padding:0 35px 0;
-  font-size: 15px;
-}
-
-.design_right{
-  position: relative;
-  margin-left: 40%;
-  border-bottom: 400px solid #fbffa0;
-  border-left: 80px solid transparent;
-  height: 0;
-  color: #000000;
-  box-shadow: 0px 5px #000000;
-    z-index: 20;
-}
-.design_left{
-　color: #000000;
-  position: relative;
-  margin-right: 40%;
-  border-bottom: 400px solid #fff352;
-  border-right: 80px solid transparent;
-  /* これで形をいじる */
-  height: 0;
-  box-shadow: 0px 5px #000000;
-    z-index: 20;
-}
-.design_left h2{
-  font-size: 27px;
-  padding: 30px 0;
-}
-.design_right h2{
-  font-size: 27px;
-  padding: 30px 0;
-}
-
-.images_left{
-  position: absolute;
-  left: 0px;
-  z-index: 10;
-}
-.images_right{
-  position: absolute;
-  right: 150px;
-  z-index: 10;
-}
-
-
-
-
-
-
-
-.flow{
-  margin-top: 20vh;
-  font-size: 0;
-  color: #000000;
-  padding-bottom: 10vh;
-}
-.flow h1{
-  font-size:8vw;
-  padding-bottom: 10vw;
-}
-.flow_content{
-  text-align: left;
-  margin:0 2vw 75px 30vw;
-  background-color: #f2f2f2;
-  font-size: 0;
-  padding: 25px 0 0 25px;
-  border-radius: 20px;
-  box-shadow: 2px 2px #000000;
-}
-.flow img {
-  text-align: left;
-  width: 50px;
-  height: 75px;
-}
-.wordpress img{
-  width: 50px;
-  height: 75px;
-}
-.flow_contents{
-  display: inline-block;
-  vertical-align: top;
-  font-size: 0;
-  margin-left: 25px;
-}
-.flow_contents h2{
-  line-height: 30px;
-  font-size: 2.3vw;
-  border-bottom: 1px solid red;
-}
-.flow_contents p{
-  padding-top: 10px;
-  font-size: 2vw;
-  color: #000000;
-  word-break: break-all;
-
-}
-
-
-
-
-
-
-
-
-.price{
-  background-color: #ffffff;
-  color: #000000;
-  padding: 5vw 15vw;
-}
-.price img {
-  width: 100%;
-}
-
-
-
-
-
-
-
-
-
-.about_us{
-  background-color: #9b9b9b;
-  text-align: left;
-  padding-left: 5vw;
-  color: white;
-  padding-bottom: 50px;
-}
-.about_us h1{
-  display: inline-block;
-  padding: 5vh 0;
-}
-.about_us a{
-  padding-left: 2vh;
-  color: #ffe8e8;
-}
-.about_us h2{
-  font-size: 2.5vw;
-}
-
-
 
 
 
 
 
 footer{
-  background-color: #000000;
+  background-color: #ffffff;
+  border-top: 5px solid#000000;
   color: #000000;
-  margin-right: 150px;
 }
 footer a{
   padding-top: 50px;
@@ -532,302 +219,24 @@ footer img{
 
 
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 1024px){
 
-header{
-  height: 100px;
-  width: 100%;
-}
-.scroll_top{
-  bottom: 15px;
-  right:40px;
-  border: 8px red solid;
-  border-top: none;
-  border-left: none;
-}
-.menu img{
-    position: fixed;
-    width:100px;
-    height: 100px;
-    top: 0;
-    left: 0;
 }
 
-.side_contents img{
-  position: fixed;
-  margin: 0;
-  top: 0;
-  right:0;
-}
+@media screen and (max-width: 768px) and (min-width: 600px){
 
-
-.head{
-  width: 100%;
-}
-.main{
-  width: 100%;
-}
-
-.service{
-  width: 100vw;
-}
-.service h1{
-  margin: 0 auto 100px;
-  font-size: 8vw;
-}
-
-
-.kaisha{
-display: none;
-}
-.usus{
-  font-size:2vw;
-}
-.height72{
-  height: 10vw;
-}
-.height120{
-  height: 20vw;
 }
 
 
 
 
+@media screen and (max-width: 600px) and (min-width:480px){
+
 }
-@media screen and (max-width:1000px){
-  .images_left{
-    position: absolute;
-    left: 0px;
-    z-index: 10;
+
+@media screen and (max-width:480px){
+  .scroll_top{
+      display: inherit;
   }
-  .images_right{
-    position: absolute;
-    right: 0;
-      z-index: 10;
-  }
-
-
-}
-
-
-@media screen and (max-width: 900px) and (min-width: 500px){
-  .head{
-    width: 100%;
-  }
-  .head img{
-    padding-top: 100px;
-  }
-  .main{
-    width: 100%;
-  }
-
-  .service{
-    width: 100vw;
-  }
-
-
-  .flows_contents{
-    width: 20vw;
-  }
-  footer{
-    margin-right: 0;
-  }
-
-}
-@media screen and (max-width: 800px){
-  .head h1{
-    font-size: 7.5vw;
-  }
-  .head h2{
-    font-size: 4vw;
-  }
-  .anxieties_contents h2{
-    margin-left: 5vw;
-    font-size: 20px;
-  }
-  .anxiety h1{
-    font-size: 8vw;
-  }
-  .lr {
-    transform: translate(0, 0);
-  }
-}
-
-
-
-
-@media screen and (max-width: 700px) {
-
-
-.power h1{
-  font-size: 10vw;
-  width:50vw;
-}
-.power_wrap{
-  margin-top: 30px;
-}
-.power_contents{
-  width: 70%;
-  margin: 0;
-  padding-top:50px ;
-}
-.power_contents h2{
-  width: 50vw;
-  font-size: 8vw;
-}
-.power_contents p{
-  font-size: 3vw;
-}
-
-.service {
-    padding-top:5vw;
-}
-.anxieties_contents h2{
-  margin-left: 5vw;
-  font-size: 3vw;
-}
-.anxiety h1{
-  font-size: 8vw;
-}
-.anxieties{
-  margin:0 5vw;
-  padding-top: 5vw;
-}
-.anxieties_contents{
-  text-align: left;
-  margin: 5vw 0;
-  line-height: 80px;
-  border-radius: 20px;
-  box-shadow: 3px 3px #000000;
-}
-
-
-
-}
-
-
-
-
-
-@media screen and (max-width: 600px){
-
-.service{
-  height: 4300px;
-}
-
-
-.service_wrap{
-  height: 800px;
-}
-.design_right{
-  margin-left: 10%;
-  position: static;
-}
-.design_left{
-  margin-right: 10%;
-  position: static;
-}
-.service img{
-  position: static;
-}
-
-.price h1{
-  font-size: 50px;
-  width: 40vw;
-  margin: 0 auto;
-}
-
-.about_us_right h1{
-  width: 30vw;
-  font-size: 7vw;
-}
-.images_left{
-width: 100%;
-}
-.images_right{
-  width: 100%;
-}
-
-
-
-
-
-}
-
-
-
-
-
-@media screen and (max-width: 500px){
-  .head img{
-    padding-top: 50px;
-  }
-  .flow_contents{
-    margin-left: 2vw;
-  }
-  .usus{
-    margin-left: 5vw;
-  }
-  .service p{
-    padding:0 10px 0;
-    font-size: 13px;
-  }
-  .flow_content{
-    width: 80vw;
-    height: 70px;
-    margin:0 auto 10vw;
-    padding: 0;
-    padding-left: 2vh;
-  }
-  .flow_content img{
-    width: 40px;
-    height: 60px;
-  }
-  footer {
-    width: 100%;
-  }
-  .temple{
-    display: none;
-  }
-  .tamtam{
-    display:inherit;
-  }
-
-}
-
-@media screen and (max-width: 400px){
-  .service{
-    padding-top: 15vw;
-    background-color: #ffffff;
-    color: #000000;
-  }
-  .flow{
-    margin-top: 50px;
-  }
-  .price{
-    height:300px;
-    padding-top: 0px;
-  }
-  .power_contents{
-    display: inline-block;
-    width: 80%;
-    font-size: 0;
-  }
-
-
-
-
-}
-
-
-
-@media screen and (max-width: 300px){
-  .flows_contents{
-    width: 80vw;
-  }
-  footer img{
-    width: 100%;
-  }
-
 
 }
