--- a/the_purpose/index.css
+++ b/the_purpose/index.css
@@ -87,7 +87,7 @@ header{
     z-index: 9999;/*最前面に*/
     width: 100%;/*右側に隙間を作る*/
     max-width: 200px;/*最大幅*/
-    height: 80%;
+    height: 100%;
     background: #fff;/*背景色*/
     transition: .3s ease-in-out;/*滑らかに表示*/
     -webkit-transform: translateX(105%);
@@ -164,6 +164,10 @@ header{
 
 .top {
   height: 100%;
+}
+.kakkoii{
+  height: 100%;
+  background-image: url(./img/samplesample.png);
 }
 .top-main{
   position: absolute;
